--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,6 +11,6 @@ jobs:
         with:
           WEBSITE_URL: https://a11ywatch.com
           SITE_WIDE: true
-          FAIL_ERROR_COUNT: 1200
-          EXTERNAL: true
-          A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
+          FAIL_ERROR_COUNT: 1400
+          # EXTERNAL: true
+          # A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
