--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,5 +1,5 @@
 name: A11yWatchBot
-on: [pull_request, push]
+on: [pull_request]
 jobs:
   run-container:
     name: End to End
@@ -9,8 +9,8 @@ jobs:
       - name: A11yWatch website scan
         uses: ./
         with:
-          WEBSITE_URL: https://a11ywatch.com
+          WEBSITE_URL: https://www.jeffmendez.com
           FAIL_ERROR_COUNT: 1400
           EXTERNAL: false
-          # SITE_WIDE: true
+          SITE_WIDE: true
           # A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
