chore(ubuntu): test latest for crawl on x64

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,13 +3,13 @@ on: [pull_request]
 jobs:
   run-container:
     name: End to End
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: A11yWatch website scan
         uses: ./
         with:
-          WEBSITE_URL: https://www.jeffmendez.com
+          WEBSITE_URL: https://a11ywatch.com
           FAIL_ERROR_COUNT: 1400
           EXTERNAL: false
           SITE_WIDE: true
