--- a/action.yml
+++ b/action.yml
@@ -72,19 +72,14 @@ runs:
       shell: bash
       run: a11ywatch --set-token ${{ inputs.A11YWATCH_TOKEN }}
 
-    - name: Increase TCP limits
+    - name: Configure Emulation for crawler
       if: ${{ inputs.EXTERNAL == 'false' && inputs.SITE_WIDE == 'true' }}
       shell: bash
       run: |
-        # increase Linux TCP buffer limits
-        sudo sysctl -w net.core.rmem_max=2097152
-        sudo sysctl -w net.core.wmem_max=2097152
-
-        # increase Linux autotuning TCP buffer limits
-        sudo sysctl -w net.ipv4.tcp_rmem="4096 87380 2097152"
-        sudo sysctl -w net.ipv4.tcp_wmem="4096 65536 2097152"
-        sudo sysctl --system
-
+        # uname -m
+        sudo apt-get update -y
+        sudo apt-get install -y qemu gcc-aarch64-linux-gnu qemu-user-static
+        docker pull --platform linux/arm64 a11ywatch/crawler
     - name: Start A11yWatch Service
       if: ${{ inputs.EXTERNAL == 'false' }}
       shell: bash
@@ -122,7 +117,7 @@ runs:
     - name: A11yWatch Crawl [Local]
       if: ${{ inputs.EXTERNAL == 'false' && inputs.SITE_WIDE == 'true' }}
       shell: bash
-      run: docker logs crawler --follow & (a11ywatch crawl --url ${{ inputs.WEBSITE_URL }} --save)
+      run: a11ywatch crawl --url ${{ inputs.WEBSITE_URL }} --save
 
     - name: A11yWatch Crawl [External]
       if: ${{ inputs.EXTERNAL == 'true' && inputs.SITE_WIDE == 'true' }}
