--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,9 +1,9 @@
 name: A11yWatchBot
-on: [pull_request, push]
+on: [pull_request]
 jobs:
   run-container:
     name: End to End
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: A11yWatch website scan
@@ -12,5 +12,5 @@ jobs:
           WEBSITE_URL: https://a11ywatch.com
           FAIL_ERROR_COUNT: 1400
           EXTERNAL: false
-          # SITE_WIDE: true
+          SITE_WIDE: true
           # A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
