--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,9 @@
 name: A11yWatch - The Accessibility Suite
-on: [pull_request, push]
+on:
+  push:
+    branches: [$default-branch]
+  pull_request:
+    branches: [$default-branch]
 author: A11yWatch
 branding:
   icon: "shield"
@@ -68,6 +72,14 @@ runs:
       shell: bash
       run: a11ywatch --set-token ${{ inputs.A11YWATCH_TOKEN }}
 
+    - name: Configure Emulation for crawler
+      if: ${{ inputs.EXTERNAL == 'false' && inputs.SITE_WIDE == 'true' }}
+      shell: bash
+      run: |
+        # uname -m
+        sudo apt-get update -y
+        sudo apt-get install -y qemu gcc-aarch64-linux-gnu qemu-user-static
+        docker pull --platform linux/arm64 a11ywatch/crawler
     - name: Start A11yWatch Service
       if: ${{ inputs.EXTERNAL == 'false' }}
       shell: bash
@@ -84,28 +96,30 @@ runs:
             echo "Waiting for server to be up (attempt: $attempt)..."
             result=$(docker logs api)
             if grep -q 'Server ready' <<< $result ; then
+              # perform slight setup delay for gRPC instance
+              sleep 5
               echo "A11yWatch ready!"
               break
             fi
             sleep 0.3
         done
 
-    - name: A11yWatch Scan
+    - name: A11yWatch Scan [Local]
       if: ${{ inputs.EXTERNAL == 'false' && inputs.SITE_WIDE == 'false' }}
       shell: bash
       run: a11ywatch scan --url ${{ inputs.WEBSITE_URL }} --save
 
-    - name: A11yWatch Scan
+    - name: A11yWatch Scan [External]
       if: ${{ inputs.EXTERNAL == 'true' && inputs.SITE_WIDE == 'false' }}
       shell: bash
       run: a11ywatch scan --url ${{ inputs.WEBSITE_URL }} --external --save
 
-    - name: A11yWatch Crawl
+    - name: A11yWatch Crawl [Local]
       if: ${{ inputs.EXTERNAL == 'false' && inputs.SITE_WIDE == 'true' }}
       shell: bash
       run: a11ywatch crawl --url ${{ inputs.WEBSITE_URL }} --save
 
-    - name: A11yWatch Crawl
+    - name: A11yWatch Crawl [External]
       if: ${{ inputs.EXTERNAL == 'true' && inputs.SITE_WIDE == 'true' }}
       shell: bash
       run: a11ywatch crawl --url ${{ inputs.WEBSITE_URL }} --external --save
