--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,7 +10,7 @@ jobs:
         uses: ./
         with:
           WEBSITE_URL: https://a11ywatch.com
-          FAIL_ERROR_COUNT: 1400
+          FAIL_TOTAL_COUNT: 1400
           EXTERNAL: false
           SITE_WIDE: true
           # A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
