--- a/action.yml
+++ b/action.yml
@@ -80,6 +80,16 @@ runs:
       shell: bash
       run: a11ywatch --set-token ${{ inputs.A11YWATCH_TOKEN }}
 
+    - name: Configure Computer Vision API KEY
+      if: ${{ inputs.A11YWATCH_TOKEN }}
+      shell: bash
+      run: a11ywatch --set-cv-token ${{ inputs.COMPUTER_VISION_SUBSCRIPTION_KEY }}
+
+    - name: Configure Computer Vision URL
+      if: ${{ inputs.A11YWATCH_TOKEN }}
+      shell: bash
+      run: a11ywatch --set-cv-url ${{ inputs.COMPUTER_VISION_ENDPOINT }}
+
     - name: Configure Emulation for crawler
       if: ${{ inputs.EXTERNAL == 'false' && inputs.SITE_WIDE == 'true' }}
       shell: bash
