chore(cli): revert linux non force install

--- a/action.yml
+++ b/action.yml
@@ -73,7 +73,7 @@ runs:
 
     - name: Install the A11yWatch CLI
       shell: bash
-      run: cargo install a11ywatch_cli || true
+      run: cargo install a11ywatch_cli -f
 
     - name: Configure CLI creds
       if: ${{ inputs.A11YWATCH_TOKEN }}
