--- a/action.yml
+++ b/action.yml
@@ -67,6 +67,12 @@ outputs:
 runs:
   using: composite
   steps:
+    - uses: actions/checkout@v3
+      if: ${{ inputs.FIX == 'true' }}
+      with:
+        repository: ${{ github.event.pull_request.head.repo.full_name }}
+        ref: ${{ github.event.pull_request.head.ref }}
+
     - uses: actions/cache@v3
       id: cache
       with:
@@ -230,7 +236,7 @@ runs:
       with:
         default_author: github_actions
         message: "fix(accessibility): add recommendations from scan"
-        committer_name: A11yWatch Github Action
+        committer_name: GitHub Actions
 
     - name: Stop A11yWatch Service
       if: ${{ !inputs.EXTERNAL }}
