--- a/action.yml
+++ b/action.yml
@@ -72,6 +72,7 @@ runs:
       with:
         repository: ${{ github.event.pull_request.head.repo.full_name }}
         ref: ${{ github.event.pull_request.head.ref }}
+        clean: false
 
     - uses: actions/cache@v3
       id: cache
