feat(cache): fix cli upgrades and cache (#23)
* feat(cache): fix cli upgrades and cache

* chore(cache): add restore-keys

--- a/action.yml
+++ b/action.yml
@@ -74,8 +74,11 @@ runs:
         ref: ${{ github.event.pull_request.head.ref }}
         clean: false
 
-    - uses: actions/cache@v3
-      id: cache
+    - name: Cache cargo crates
+      uses: actions/cache@v3
+      id: cache-cargo
+      env:
+        cache-name: cache-cargo-crates
       with:
         path: |
           ~/.cargo/bin/
@@ -83,16 +86,26 @@ runs:
           ~/.cargo/registry/cache/
           ~/.cargo/git/db/
           target/
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-cargo-${{ env.cache-name }}-${{ hashFiles('~/.cargo/registry/cache/**/*') }}
+        restore-keys: |
+          ${{ runner.os }}-cargo-${{ env.cache-name }}-
+          ${{ runner.os }}-cargo-
+          ${{ runner.os }}-
 
     - name: Install Rust
-      if: steps.cache.outputs.cache-hit != 'true'
+      if: steps.cache-cargo.outputs.cache-hit == 'false'
       shell: bash
-      run: curl https://sh.rustup.rs -sSf | sh -s -- -y
+      run: curl https://sh.rustup.rs -sSf | sh -s -- -y && cargo install cargo-update
 
     - name: Install the A11yWatch CLI
+      if: steps.cache-cargo.outputs.cache-hit == 'false'
       shell: bash
-      run: cargo install a11ywatch_cli --force && a11ywatch -V
+      run: cargo install a11ywatch_cli
+
+    - name: Update A11yWatch CLI
+      if: steps.cache-cargo.outputs.cache-hit == 'true'
+      shell: bash
+      run: cargo install-update a11ywatch_cli
 
     - name: Configure CLI creds
       if: ${{ inputs.A11YWATCH_TOKEN }}
