--- a/action.yml
+++ b/action.yml
@@ -65,6 +65,10 @@ inputs:
     description: The Computer Vision subscription key to use for advanced AI.
     required: false
     default: ""
+  UPGRADE:
+    description: Upgrade the docker images to latest.
+    required: false
+    default: false
 outputs:
   results:
     description: "Website Results"
@@ -101,19 +105,24 @@ runs:
           ${{ runner.os }}-
 
     - name: Install Rust
-      if: steps.cache-cargo.outputs.cache-hit == 'false'
+      if: ${{ steps.cache-cargo.outputs.cache-hit == 'false' || inputs.UPGRADE == 'true' }}
       shell: bash
-      run: curl https://sh.rustup.rs -sSf | sh -s -- -y && cargo install cargo-update
+      run: curl https://sh.rustup.rs -sSf | sh -s -- -y
+
+    - name: Install Cargo Update
+      if: ${{ steps.cache-cargo.outputs.cache-hit != 'true' || inputs.UPGRADE == 'true' }}
+      shell: bash
+      run: cargo install cargo-update
 
     - name: Install the A11yWatch CLI
-      if: steps.cache-cargo.outputs.cache-hit == 'false'
+      if: ${{ steps.cache-cargo.outputs.cache-hit == 'false' }}
       shell: bash
       run: cargo install a11ywatch_cli --force
 
     - name: Update A11yWatch CLI
-      if: steps.cache-cargo.outputs.cache-hit == 'true'
+      if: ${{ steps.cache-cargo.outputs.cache-hit != 'true' || inputs.UPGRADE == 'true' }}
       shell: bash
-      run: cargo install-update a11ywatch_cli
+      run: cargo install-update -i a11ywatch_cli
 
     - name: Configure CLI creds
       if: ${{ inputs.A11YWATCH_TOKEN }}
@@ -130,24 +139,28 @@ runs:
       shell: bash
       run: a11ywatch --set-cv-url ${{ inputs.COMPUTER_VISION_ENDPOINT }}
 
+    - name: Build A11yWatch Service
+      if: ${{ inputs.EXTERNAL == 'false' }}
+      shell: bash
+      run: a11ywatch build --standalone ${{ inputs.UPGRADE == 'true' && '--upgrade' || '' }}
+
     - name: Start A11yWatch Service
       if: ${{ inputs.EXTERNAL == 'false' }}
       shell: bash
-      run: a11ywatch start
+      run: a11ywatch start --standalone
 
     - name: Wait for Healthy Container
       if: ${{ inputs.EXTERNAL == 'false' }}
       shell: bash
       run: |
         attempt=0
-
         while [ $attempt -le 30 ]; do
             attempt=$(( $attempt + 1 ))
             echo "Waiting for server to be up (attempt: $attempt)..."
-            result=$(docker logs api)
+            result=$(docker logs a11ywatch)
             if grep "^Server ready" <<< $result; then
               echo "A11yWatch ready!"
-               sleep 8
+               sleep 3.3
               break
             fi
             sleep 0.3
