--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ inputs:
     required: false
     default: false
   EXTERNAL:
-    description: Use the A11yWatch external API hosted.
+    description: Use the A11yWatch external API.
     required: false
     default: false
   SITE_WIDE:
@@ -30,7 +30,7 @@ inputs:
     required: false
     default: false
   TLD:
-    description: Include all tld extensions.
+    description: Include all TLD extensions.
     required: false
     default: false
   FAIL_TOTAL_COUNT:
@@ -46,7 +46,7 @@ inputs:
     required: false
     default: 0
   DISABLE_PR_STATS:
-    description: Disable the A11yWatch bot from posting on your PR.
+    description: Disable the bot from posting on your PR.
     required: false
     default: false
   TOKEN:
@@ -58,7 +58,7 @@ inputs:
     required: false
     default: false
   A11YWATCH_TOKEN:
-    description: The a11ywatch token to use for authenticated to the API.
+    description: The A11yWatch token to authenticate to the API.
     required: false
     default: ""
   COMPUTER_VISION_ENDPOINT:
