bench(large): add large 1000+  page bench coinbase.com

--- a/.github/workflows/bench-action.yml
+++ b/.github/workflows/bench-action.yml
@@ -9,8 +9,8 @@ jobs:
       - name: A11yWatch website scan
         uses: ./
         with:
-          WEBSITE_URL: https://a11ywatch.com
-          FAIL_TOTAL_COUNT: 10000
+          WEBSITE_URL: https://www.coinbase.com
+          FAIL_TOTAL_COUNT: 10000000
           EXTERNAL: false
           SITE_WIDE: true
           SUBDOMAINS: false
