--- a/.github/workflows/bench-pa11y.yml
+++ b/.github/workflows/bench-pa11y.yml
@@ -10,8 +10,8 @@ jobs:
       - name: Install pa11y-ci dependencies.
         run: npm install pa11y-ci  -g
 
-      - name: Run Pa11y-CI Compare.
-        run: pa11y-ci --sitemap https://a11ywatch.com/sitemap.xml | tee pa11y_output.txt
+      - name: Run Pa11y-CI.
+        run: pa11y-ci --sitemap https://www.coinbase.com/sitemap.xml | tee pa11y_output.txt
 
       - name: Read pa11y_output file.
         id: pa11y_output
