--- a/.github/workflows/bench-action.yml
+++ b/.github/workflows/bench-action.yml
@@ -1,5 +1,9 @@
 name: Bench A11yWatch
 on: [pull_request]
+
+env:
+  AI_DISABLED: true
+
 jobs:
   run-container:
     name: Bench Website Test
@@ -9,12 +13,11 @@ jobs:
       - name: A11yWatch website scan
         uses: ./
         with:
-          WEBSITE_URL: https://a11ywatch.com
-          FAIL_TOTAL_COUNT: 10000
+          WEBSITE_URL: https://www.hbo.com
+          FAIL_TOTAL_COUNT: 10000000000
           EXTERNAL: false
           SITE_WIDE: true
           SUBDOMAINS: false
           TLD: false
           LIST: true
           UPGRADE: false
-          # A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
