bench(compare): add small-medium benches

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -16,5 +16,5 @@ jobs:
           SUBDOMAINS: true
           TLD: true
           LIST: true
-          UPGRADE: false
-          # A11YWATCH_TOKEN: ${{ secrets.A11YWATCH_TOKEN }}
+          UPGRADE: true
+          SLIM: true
