--- a/.github/workflows/bench-action.yml
+++ b/.github/workflows/bench-action.yml
@@ -13,7 +13,7 @@ jobs:
       - name: A11yWatch website scan
         uses: ./
         with:
-          WEBSITE_URL: https://a11ywatch.com
+          WEBSITE_URL: https://vercel.com
           FAIL_TOTAL_COUNT: 0
           EXTERNAL: false
           SITE_WIDE: true
