--- a/.github/workflows/bench-pa11y.yml
+++ b/.github/workflows/bench-pa11y.yml
@@ -11,7 +11,7 @@ jobs:
         run: npm install pa11y-ci  -g
 
       - name: Run Pa11y-CI.
-        run: pa11y-ci --sitemap https://www.hbo.com/sitemap.xml | tee pa11y_output.txt
+        run: pa11y-ci --sitemap https://vercel.com/sitemap.xml | tee pa11y_output.txt
 
       - name: Read pa11y_output file.
         id: pa11y_output
